--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 
 .logo-content{
-    width: 75%;
+    width: 100%;
     display: flex;
     align-items: center;
 }
@@ -67,13 +67,46 @@ li{
     padding: 30px 150px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    
+    justify-content:center;
+
 }
 
 .background-pink{
-    background-color: pink;
+    background-color:rgb(224, 124, 229);
     height: 300px;
     width: 500px;
     border-style: dashed;
+}
+
+.col-sm{
+    width: 500px;
+    height: 300px;
+    background-color: pink;
+    border-style: dashed;
+}
+
+.col-main{
+    width: 600px;
+    height: 300px;
+    background-color: rgb(48, 133, 237);
+    border-style: dashed;
+}
+
+.background-grey{
+    background-color: rgb(176, 176, 176);
+    padding: 10px;
+}
+
+.row1{
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    margin: 20px 50px; 
+}
+
+.row{
+    display: flex; 
+    align-items: center;
+    justify-content:center;
+    margin: 20px 50px; 
 }
