--- a/css/style.css
+++ b/css/style.css
@@ -79,14 +79,14 @@ li{
 }
 
 .col-sm{
-    width: 500px;
+    width: 100%;
     height: 300px;
     background-color: pink;
     border-style: dashed;
 }
 
 .col-main{
-    width: 600px;
+    width: 100%;
     height: 300px;
     background-color: rgb(48, 133, 237);
     border-style: dashed;
@@ -110,3 +110,13 @@ li{
     justify-content:center;
     margin: 20px 50px; 
 }
+
+.backgroound-green{
+    width: 100%;
+    height: 500px;
+    background-color: green;
+    border-style: dashed;
+}
+
+    
+
