--- a/css/style.css
+++ b/css/style.css
@@ -79,14 +79,14 @@ li{
 }
 
 .col-sm{
-    width: 100%;
+    width: 500px;
     height: 300px;
     background-color: pink;
     border-style: dashed;
 }
 
 .col-main{
-    width: 100%;
+    width: 800px;
     height: 300px;
     background-color: rgb(48, 133, 237);
     border-style: dashed;
@@ -107,7 +107,8 @@ li{
 .row{
     display: flex; 
     align-items: center;
-    justify-content:center;
+    justify-content: center;
+    flex-direction: row-reverse;
     margin: 20px 50px; 
 }
 
@@ -118,5 +119,32 @@ li{
     border-style: dashed;
 }
 
+.row3{
+    display: flex; 
+    align-items: center;
+    justify-content: center;
     
+}
 
+.col-main2{
+    width: 600px;
+    height: 400px;
+    background-color: rgb(252, 123, 87);
+    border-style: dashed;
+}
+
+.col-sm1{
+    width: 300px;
+    height: 400px;
+    background-color: rgb(47, 213, 180);
+    border-style: dashed;
+}
+
+footer{
+    background-color: rgb(50, 49, 49);
+    padding: 40px;
+}
+
+.lo{
+    color: white;
+}
