--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,8 @@ li{
     display: flex; 
     align-items: center;
     justify-content: center;
-    
+    margin-bottom: 20px;
+
 }
 
 .col-main2{
@@ -136,15 +137,28 @@ li{
 .col-sm1{
     width: 300px;
     height: 400px;
-    background-color: rgb(47, 213, 180);
+    background-color: rgb(72, 182, 158);
     border-style: dashed;
 }
 
-footer{
-    background-color: rgb(50, 49, 49);
-    padding: 40px;
+.background-black{
+    background-color: rgb(44, 43, 43);
+    padding: 5px;
+}
+.lo{
+    color: black;
+    padding: 10px;
+    background-color: #ff7863;
+    font-size: 15px;
+    border-style: dashed;
+    display: flex;
+    align-items: center;
 }
 
-.lo{
-    color: white;
+.lista{
+    background-color: rgb(105, 236, 190);
+    height: 40px;
+    width: 100%;
+    display: flex;
+    align-items: center;
 }
