--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,13 @@
     box-sizing: border-box;
 }
 
+/*header*/
 .container{
     width: 75%;
     margin: 0 auto;
 }
 
-.logo-content{
+.row{
     width: 100%;
     display: flex;
     align-items: center;
@@ -17,16 +18,17 @@
 
 .background-lightblue{
     background-color: lightblue;
-    height: 40px;
+    height: 50px;
+    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
     flex-wrap: wrap;
 }
 
 .background-orange1{
     background-color: orange;
-    height: 20px;
+    border: 1px solid black;
+    height: 30px;
     width: 25%;
     border-style: dashed;
     display: flex;
@@ -35,15 +37,13 @@
 
 .background-orange2{
     background-color: orange;
-    height: 20px;
+    border: 1px solid black;
+    height: 30px;
     width: 50%;
     border-style: dashed;
     display: flex;
     align-items: center;
-}
-
-.log{
-    display: flex;
+    justify-content: center;
 }
 
 ul{
@@ -56,12 +56,15 @@ ul{
     flex-wrap: wrap;
 }
 
-li{
+li{ 
+    display: flex;
+    align-items: center;
     padding-top: 4px;
     height: 25px;
     width: 5%;
 }
 
+/*seconda parte header*/
 .background-blue{
     background-color: blue;
     padding: 30px 150px;
@@ -71,45 +74,37 @@ li{
 
 }
 
+.container-sm{
+    width: 60%;
+    margin: 0 auto;
+}
+
 .background-pink{
     background-color:rgb(224, 124, 229);
+    border: 1px solid black;
     height: 300px;
-    width: 500px;
+    width: 100%;
     border-style: dashed;
 }
 
+/*main*/
 .col-sm{
-    width: 500px;
+    width: 40%;
     height: 300px;
     background-color: pink;
     border-style: dashed;
 }
 
 .col-main{
-    width: 800px;
+    width: 60%;
     height: 300px;
     background-color: rgb(48, 133, 237);
     border-style: dashed;
 }
 
+/*riga con background grey*/
 .background-grey{
     background-color: rgb(176, 176, 176);
-    padding: 10px;
-}
-
-.row1{
-    display: flex;
-    align-items: center;
-    justify-content:center;
-    margin: 20px 50px; 
-}
-
-.row{
-    display: flex; 
-    align-items: center;
-    justify-content: center;
-    flex-direction: row-reverse;
-    margin: 20px 50px; 
 }
 
 .backgroound-green{
@@ -118,33 +113,47 @@ li{
     background-color: green;
     border-style: dashed;
 }
+/*row*/
+.row1{
+    width: 100%;
+    margin: 0 auto; 
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    padding: 20px;
+}
 
-.row3{
+.row2{
+    width: 100%;
+    margin: 0 auto; 
     display: flex; 
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
-
+    flex-direction: row-reverse;
+    padding: 20px;
 }
 
+/*footer*/
 .col-main2{
-    width: 600px;
+    width: 70%;
     height: 400px;
     background-color: rgb(252, 123, 87);
     border-style: dashed;
+    border: 1px solid black;
 }
 
 .col-sm1{
-    width: 300px;
+    width: 30%;
     height: 400px;
     background-color: rgb(72, 182, 158);
     border-style: dashed;
+    border: 1px solid white;
 }
 
 .background-black{
     background-color: rgb(44, 43, 43);
-    padding: 5px;
 }
+
 .lo{
     color: black;
     padding: 10px;
@@ -161,4 +170,5 @@ li{
     width: 100%;
     display: flex;
     align-items: center;
+    margin: 1px;
 }
